3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/object.c, include/libproto.h: change nrof parameter of get_split_ob to
   uint32 type.
server/c_object.c, include/sproto.h: change nrof parameter of drop_object to
   uint32 type.
plugin/{plugin_python.c, include/plugin_python.h},
plugin_animator/{plugin_animator.c, include/plugin_animator.h},
server/{apply.c, attack.c, gods.c, monster.c, player.c, skills.c, time.c,
   timers.c}: Change type of CFParm.Value[5] and StackParm1[] to uint32 to be
   able to pass an "nrof" value.
plugin/plugin_python.c, plugin/include/plugin_python.h: Remove spell wrapper
   functions.
plugin/plugin_python.c, plugin/include/plugin_python.h: Replace skill-IDs by
   skill names. Remove skill-ID wrapper functions.
Andreas Kirschbaum 2005-02-20

------------------------------------------------------------------------------
Changes for 1.7.0:

configure, configure.ac, include/autoconf.h.in:  Update for
   version 1.7.0.  Add check for libz - needed by libpng (at least on my
   system), which is needed for the editor.
MSW 2005-01-23

common/object.c: Change CAN_MERGE() from an inline function, since
   it calls itself and inline functions are not supposed to do that.
   Update type check in insert_ob_in_map() to check against defined
   type (EXIT) instead of hardcoded integer value (66).
crossedit/xutil.c:  Update to just include Defines.h, which then includes
   all the other necessary files, including global.h.
include/global.h: Add #ifdef checks for the UINT*_MAX types, as some
   systems already define these values, which results in a redefinition
   error.  Also fix up // style comment.